--- a/hpack.cabal
+++ b/hpack.cabal
@@ -15,10 +15,22 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
-executable hpack
-  main-is:             Main.hs
+executable extractIface
+  hs-source-dirs:      bin
+  main-is:             ExtractIface.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9, ghc, ghc-paths, transformers
+  build-depends:       hpack
   -- hs-source-dirs:
   default-language:    Haskell2010
+
+executable loadCabal
+  hs-source-dirs:      bin
+  main-is:             LoadCabal.hs
+  build-depends:       hpack
+  default-language:    Haskell2010
+
+library
+  build-depends:       base >=4.8 && <4.9, ghc, ghc-paths, transformers, Cabal,
+                       filepath, containers
+  exposed-modules:     HPack.Cabal
