--- a/hpack.cabal
+++ b/hpack.cabal
@@ -20,17 +20,21 @@ executable extractIface
   main-is:             ExtractIface.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       hpack
+  build-depends:       base >= 4.8, hpack
   -- hs-source-dirs:
   default-language:    Haskell2010
 
 executable loadCabal
   hs-source-dirs:      bin
   main-is:             LoadCabal.hs
-  build-depends:       hpack
+  build-depends:       base >=4.8, hpack
   default-language:    Haskell2010
 
 library
   build-depends:       base >=4.8 && <4.9, ghc, ghc-paths, transformers, Cabal,
                        filepath, containers
-  exposed-modules:     HPack.Cabal
+  exposed-modules:     HPack.Package
+                       HPack.Cabal
+                       HPack.PkgDB
+                       HPack.Iface
+                       HPack.Sandbox
