--- a/hpack.cabal
+++ b/hpack.cabal
@@ -19,6 +19,6 @@ executable hpack
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9, ghc, ghc-paths, transformers
+  build-depends:       base, ghc, ghc-paths, transformers
   -- hs-source-dirs:
   default-language:    Haskell2010
