--- a/hpack.cabal
+++ b/hpack.cabal
@@ -16,7 +16,8 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable extractIface
-  hs-source-dirs:      bin
+  default-language:    Haskell2010
+  hs-source-dirs:      src/ExtractIFace
   main-is:             ExtractIface.hs
   -- other-modules:
   -- other-extensions:
@@ -25,14 +26,17 @@ executable extractIface
   default-language:    Haskell2010
 
 executable loadCabal
-  hs-source-dirs:      bin
+  hs-source-dirs:      src/LoadCabal
   main-is:             LoadCabal.hs
   build-depends:       base >=4.8, hpack
   default-language:    Haskell2010
 
 library
+  hs-source-dirs:      src 
+  default-language:    Haskell2010
   build-depends:       base, ghc, ghc-paths, transformers, Cabal,
-                       filepath, containers
+                       filepath <= 1.3.0.1, containers, temporary < 1.1.2.5,
+                       directory <= 1.2.2.0
   exposed-modules:     HPack.Package
                        HPack.Cabal
                        HPack.PkgDB
