Work on strategies for package interface inference

--- a/hpack.cabal
+++ b/hpack.cabal
@@ -37,7 +37,7 @@ library
   build-depends:       base, ghc, ghc-paths, transformers, Cabal,
                        filepath, containers, temporary, vector,
                        directory, ghc-tcplugins-extra, bytestring,
-                       process
+                       process, mtl, MonadRandom, random-shuffle
   exposed-modules:     HPack.Source
                        HPack.Cabal
                        HPack.Build
