Wrestle with writing proper .cabal files with fixed dependency versions

--- a/hpack.cabal
+++ b/hpack.cabal
@@ -39,7 +39,7 @@ library
                        filepath, containers, temporary, vector,
                        directory, ghc-tcplugins-extra, bytestring,
                        process, mtl, MonadRandom, random-shuffle,
-                       aeson, text
+                       aeson, text, random, deepseq
   exposed-modules:     HPack.Source
                        HPack.Cabal
                        HPack.Build
