Work on parsing of external symbol files created by our modified GHC

--- a/hpack.cabal
+++ b/hpack.cabal
@@ -60,6 +60,7 @@ library
                        HPack.Iface.IfaceExtract
                        HPack.Iface.IfaceRepo
                        HPack.Iface.LoadIface
+                       HPack.Iface.ExternalSymbols
                        HPack.Infer.Inference
                        -- HPack.Infer.Parser
                        -- HPack.Infer.Preprocess
